# pitight

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/pitight/: __init__.py  artifact.py  assertions.py  cli.py  config_hash.py  json_utils.py  luigi_adapter.py  partition.py  partitioned.py  periods.py  range_driver.py  schema_stats.py  stage.py  temporal_leak.py  validation.py
tests/: test_artifact.py  test_assertions.py  test_config_hash.py  test_json_utils.py  test_luigi_adapter.py  test_partition.py  test_partitioned.py  test_periods.py  test_range_driver.py  test_schema_stats.py  test_stage.py  test_temporal_leak.py  test_usage_examples.py  test_validation.py
