[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pitight"
version = "0.2.0"
description = "Pipeline integrity checker for ML workflows. Detects config drift, temporal leaks, and schema violations before they break your models."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Sato" },
]
keywords = ["ml", "pipeline", "integrity", "data-quality", "drift-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/yusukesugar/pitight"
Repository = "https://github.com/yusukesugar/pitight"

[project.scripts]
pitight = "pitight.cli:main"

[project.optional-dependencies]
luigi = ["luigi>=3.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
